2005-07-20  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.18

        * rpc.yppasswdd/update.c (external_update_env): Remove obsolete code.
	(external_update_pipe): Don't use buffer of fixed length.

        * lib/log_msg.c (log_msg): Use vsnprintf.

2005-05-31  Thorsten Kukuk  <kukuk@suse.de>

	* release vesion 2.17

	* lib/securenets.c (load_securenets): Fix debug output.

	* ypserv/server.c: Handle return value of 0 correct for is_valid().

2005-05-19  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.16

	* rpc.yppasswdd/yppasswdd.c (sig_child): Restore errno.
	* rpc.ypxfrd/ypxfrd.c (sig_child): Likewise.
	* yppush/yppush.c (sig_child): Likewise.
	Based on patch from Mark Brown <broonie@sirena.org.uk>

	* lib/compat.c (svc_getcaller): Fix return value.
	* revnetgroup/revnetgroup.c (insert_netgroup): Make static.
	* rpc.yppasswdd/yppasswd_xdr.c: Cast uid_t/gid_t to int.
	* rpc.ypxfrd/ypxfrd.c: Fix includes, use int on HPUX for
	getpeername.
	* rpc.ypxfrd/ypxfrd_server.c: Fix includes.
	* yphelper/yphelper.c: Likewise.
	* yppush/yppush.c: Likewise.
	* ypserv/ypserv.c: Likewise.
	* ypxfr/ypxfr.c: Likewise.
	Patch from Petter Reinholdtsen <petter.reinholdtsen@usit.uio.no>

2005-04-07  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.15

	* configure.in: Check for -fpie/-pie support.
	* lib/Makefile: Compile with -fpie if supported.
	* rpc.yppasswdd/Makefile.am: Likewise.
	* rpc.ypxfrd/Makefile.am: Likewise.
	* yppush/Makefile.am: Likewise.
	* ypserv/Makefile.am: Likewise.

	* yphelper/yphelper.c: Fix gcc4 warning.

2005-03-23  Thorsten Kukuk  <kukuk@suse.de>

	* makedbm/makedbm.c (dump_file): Use a TAB as seperator
	between key and data.

2004-09-03  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.14

	* lib/compat.c (svc_getcaller): Use log_msg instead of
	fprintf. Patch from Petter Reinholdtsen <pere@hungry.com>.

	* ypserv/reg_slp.c: Support systems without asprintf.
	Based on patch from Petter Reinholdtsen <pere@hungry.com>.
